--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 	<script>
 	    var firebaseConfig = {
 	      //apiKey: "AIzaSyDZCBYYnoI8O9rWW_V9PhksdRppDWfSG4o", 
-	      //databaseURL: "https://probe-23-02-2023-default-rtdb.europe-west1.firebasedatabase.app"
-		  databaseURL: "https://probe-web-default-rtdb.europe-west1.firebasedatabase.app",
+	      databaseURL: "https://probe-23-02-2023-default-rtdb.europe-west1.firebasedatabase.app"
+		  //databaseURL: "https://probe-web-default-rtdb.europe-west1.firebasedatabase.app",
         };
 	  
       // Initialize Firebase
