--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 	<script>
 	    var firebaseConfig = {
 	      //apiKey: "AIzaSyDZCBYYnoI8O9rWW_V9PhksdRppDWfSG4o", 
-	      databaseURL: "https://probe-23-02-2023-default-rtdb.europe-west1.firebasedatabase.app"
-		  //databaseURL: "https://probe-web-default-rtdb.europe-west1.firebasedatabase.app",
+	      //databaseURL: "https://probe-23-02-2023-default-rtdb.europe-west1.firebasedatabase.app"
+		  databaseURL: "https://probe-web-default-rtdb.europe-west1.firebasedatabase.app",
         };
 	  
       // Initialize Firebase
@@ -77,7 +77,7 @@
 	  
 	  async function get_last_forecasts() {
 	    for (var part_name_no=0; part_name_no < path_name.length; part_name_no++) {
-	      var path = "forecast/" + path_name[part_name_no];
+	      var path = "forec_gh/forecast/" + path_name[part_name_no];
 		  await get_last_forecast_param (path).then ((value) => {
 		    //console.log(path, value[value.length-1]);
 			// Здесь вызывать функцию построения графика параметра
@@ -110,7 +110,7 @@
 	  
 	  async function get_dist() {
 	    for (var part_name_no=0; part_name_no < path_name.length-1; part_name_no++) {
-	      var path = "distribution/" + path_name[part_name_no];
+	      var path = "forec_gh/distrib/" + path_name[part_name_no];
 		  await get_dist_param (path).then ((value) => {
 		    //console.log(path, value[value.length-1]);
 			// Здесь вызывать функцию построения графика параметра
