--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<!-- <link rel="icon" href="data:;base64,="> -->
 	<script src="js/jquery-3.2.1.min.js"></script>
 	<script src="js/highcharts.js"></script>
+	<script src="js/exporting.js"></script>
 	<!--<script src="https://code.highcharts.com/highcharts.js.map"></script>
 	<script src="https://code.highcharts.com/windbarb.js.map"></script>-->
 	<script src="js/windbarb.js"></script>
