--- a/pages/statistics_graph.html
+++ b/pages/statistics_graph.html
@@ -1,4 +1,4 @@
-<h4>Статистика точности прогнозов</h4>
+<h4>Распределение ошибок прогнозов</h4>
 <p style="font-size: 12px;">(Наблюдения в течение <span id="stat_day"></span> дней)</em></p>
 
 <div id="div_dist_grath"></div>
