--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <body>
 	<div class="tab">
 	  <button class="tablinks" onclick="openTab(event, 'home')" id="defaultOpen">Главная</button>
-	  <button class="tablinks" onclick="openTab(event, 'forecasts')">Прогноз</button>
+	  <button class="tablinks" onclick="openTab(event, 'forecasts')">Текущий прогноз</button>
 	  <button class="tablinks" onclick="openTab(event, 'mean_error')">Средняя ошибка прогноза</button>
 	  <button class="tablinks" onclick="openTab(event, 'archive_tab')">Архив прогнозов</button>
 	  <button class="tablinks" onclick="openTab(event, 'statistics_graph')">Распреде- ление ошибок графики</button>
