--- a/pages/about.html
+++ b/pages/about.html
@@ -1,6 +1,23 @@
 <!-- Version 1.4.1 05-03-2023 -->
-<h4>29-03-2022 Проект "Cервер прогноза погоды на ESP8266"</h4>
+<!-- v 08-04-2023 -->
+<h4>Анализ точности прогноза погоды с сайта Openweathermap</h4>
+<img  class="center fit" src="images/forecasting.jpg">
 <br \>
-<img  class="" src="images/I_am.jpg">
-<br \><br \>
-<p>Последнее обновление: 05.03.2023 (версия 2.0.0).</p>
+<p class="p_home"><b>История разработки:</b></p>
+<p class="p_home"><b>0.0.0</b> 29.03.2022 Начало работы. Программа на Node.js.</p>
+<p class="p_home"><b>1.0.0</b> 20.04.2022 Начало работы над сервером на МК.</p>
+<p class="p_home"><b>1.0.1</b> 27.04.2022 Успешная запись прогнозов на Firebase для двух городов в ручном режиме.</p>
+<p class="p_home"><b>1.0.2</b> 29.04.2022 Обновление/добавление прогнозов посредством Firebase.updateNode.</p>
+<p class="p_home"><b>1.0.3</b> 06.05.2022 Законченный интерфейс для прогнозов. Отказ от Firebase, запись данных в МК.</p>
+<p class="p_home"><b>1.1.0</b> 05.08.2022 Программа работает без ошибок в разделе Статистика. Начало сбора статистики ошибок прогноза температуры.</p>
+<p class="p_home"><b>1.2.0</b> 03.10.2022 Графическое отображение статистики ошибок прогноза температуры.</p>
+<p class="p_home"><b>1.2.1</b> 11.10.2022 Правка интерфейса.</p>
+<p class="p_home"><b>1.2.2</b> 22.10.2022 Загрузка после переустановки Win10.</p>
+<p class="p_home"><b>1.3.0</b> 29.01.2023 Начало разработки для ESP32 c WebServer.</p>
+<p class="p_home"><b>1.3.1</b> 04.02.2023 Возвращение на ESP8266, замена EEPROM на LittleFS.</p>
+<p class="p_home"><b>2.0.0</b> 05.03.2023 ESP8266 + Firebase + GitHub.</p>
+<p class="p_home"><b>2.0.1</b> 09.03.2023 Закончена страница прогнозов.</p>
+<p class="p_home"><b>3.0.1</b> 18.03.2023 Отлажена программа на ESP8266 (возвращение на Arduino 1.8.16).</p>
+<p class="p_home"><b>4.0.0</b> 01.04.2023 Сервер на GitHub. Отказ от сервера на ESP.</p>
+<p class="p_home"><b>4.0.1</b> 03.04.2023 Вывод таблицы распределения ошибок прогноза.</p>
+<p class="p_home"><b>4.1.0</b> 08.04.2023 Вывод графиков распределения ошибок прогноза.</p>
