--- a/pages/about.html
+++ b/pages/about.html
@@ -4,6 +4,17 @@
 <br \>
 <img  class="center fit" src="images/forecasting.jpg">
 <br \>
+<p class="p_home"><b>Описание:</b></p>
+<p class="p_home">Программа-сервер расположен на GitHub. Она запрашивает один раз в сутки прогноз погоды с сайта Openweathermap и сохраняет его в базе данных платформы Firebase.</p>
+<p class="p_home">Сохраненные прогнозы программа обрабатывает, считая, что текущий (последний) прогноз есть истинное значение прогнозируемых параметров.</p>
+<p class="p_home">Это истинное значение сравнивается с прогнозируемыми ранее значениями: за один, два, семь дней до этого.</p>
+<p class="p_home">Сравнение истинного значения с прогнозируемыми позволяет вычислить ошибку прогноза на один, два и т.д. дней (до семи).</p>
+<p class="p_home">Собирается статистика ошибок прогноза, которая также запоминается в базе данных Firebase.</p>
+<p class="p_home">Всего наблюдаются 10 параметров: температура (минимальная и максимальная), давление, влажность, облачность, скорость и направление ветра, вероятность осадков, количество осадков (дождь, снег).</p>
+<p class="p_home">Пользователю предоставляются текущий прогноз 10 параметров, графики и таблицы прогнозов и распределения ошибок.</p>
+<p class="p_home">Наблюдение ведется по одному городу - Харькову.</p>
+<br \>
+
 <p class="p_home"><b>История разработки:</b></p>
 <p class="p_home"><b>0.0.0</b> 29.03.2022 Начало работы. Программа на Node.js.</p>
 <p class="p_home"><b>1.0.0</b> 20.04.2022 Начало работы над сервером на МК.</p>
