--- a/pages/about.html
+++ b/pages/about.html
@@ -5,7 +5,7 @@
 <img  class="center fit" src="images/forecasting.jpg">
 <br \>
 <p class="p_home"><b>Описание:</b></p>
-<p class="p_home">Программа-сервер расположен на GitHub. Она запрашивает один раз в сутки прогноз погоды с сайта Openweathermap и сохраняет его в базе данных платформы Firebase.</p>
+<p class="p_home">Программа-сервер расположена на веб-сервисе GitHub. Она запрашивает один раз в сутки прогноз погоды с сайта Openweathermap и сохраняет его в базе данных платформы Firebase.</p>
 <p class="p_home">Сохраненные прогнозы программа обрабатывает, считая, что текущий (последний) прогноз есть истинное значение прогнозируемых параметров.</p>
 <p class="p_home">Это истинное значение сравнивается с прогнозируемыми ранее значениями: за один, два, семь дней до этого.</p>
 <p class="p_home">Сравнение истинного значения с прогнозируемыми позволяет вычислить ошибку прогноза на один, два и т.д. дней (до семи).</p>
